--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -7,4 +7,37 @@
   position: relative;
   width: 100%;
   min-height: 100vh;
+  justify-content: center;
+  align-items: center;
+  background: $black;
+  .container {
+    display: flex;
+    width: 60%;
+    height: auto;
+    flex-direction: column;
+    justify-content: center;
+    align-items: space-around;
+    padding: 1rem;
+    background: $white;
+    box-shadow: 0 0 1rem #000000;
+    div {
+      width: calc(100% - 3rem * 2);
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: center;
+      padding: 0 3rem;
+      margin: 1rem 0;
+      font-size: 2rem;
+      input {
+        -webkit-appearance: none;
+        outline: none;
+        border: 3px solid $green;
+        padding: 3px;
+        height: 3rem;
+        width: 30rem;
+        font-size: 2.5rem;
+      }
+    }
+  }
 }
