--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -10,7 +10,29 @@
   justify-content: center;
   align-items: center;
   background: $black;
+  flex-direction: column;
+  header {
+    display: flex;
+    color: $white;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    margin: 2rem;
+    h1 {
+      font-size: 3.5rem;
+      @media screen and (max-width: 700px) {
+        font-size: 2.2rem;
+      }
+    }
+    a {
+      text-decoration: none;
+      color: $white;
+    }
+  }
   .container {
+    @media screen and (max-width: 1024px) {
+      width: 100%;
+    }
     display: flex;
     width: 60%;
     height: auto;
@@ -21,22 +43,31 @@
     background: $white;
     box-shadow: 0 0 1rem #000000;
     div {
-      width: calc(100% - 3rem * 2);
+      width: calc(100% - 1rem * 2);
       display: flex;
       flex-direction: row;
       justify-content: space-between;
       align-items: center;
-      padding: 0 3rem;
+      padding: 0 1rem;
       margin: 1rem 0;
-      font-size: 2rem;
+      font-size: 1rem;
+      @media screen and (max-width: 700px) {
+        flex-direction: column;
+        p {
+          margin-bottom: 5px;
+        }
+      }
       input {
+        @media screen and (max-width: 1024px) {
+          width: 80%;
+        }
         -webkit-appearance: none;
         outline: none;
         border: 3px solid $green;
         padding: 3px;
         height: 3rem;
         width: 30rem;
-        font-size: 2.5rem;
+        font-size: 1.5rem;
       }
     }
   }
